bat.bool1.diff21.Diff21.scala.error
Erreur de compilation :
Diff21:7: error: not found: value Maths
    return Maths.abs(2*(21-n))
           ^