bat.bool1.diff21.Diff21.scala.code
def diff21(n:Int): Int = {
  if (n<=21) {
    return 21-n
  }
  else {
    return Maths.abs(2*(21-n))
  }
}